# mvr

./: .gitignore  CITATION.cff  LICENSE  README.md  download_viclip.py  download_viclip_b.py  encode.py  pyproject.toml
configs/algo/: tqc.yaml  vlm_tqc.yaml
configs/experiment/: base.yaml
configs/task/: Humanoid-v4.yaml  HumanoidStandup-v4.yaml  Pusher-v4.yaml  customized_humanoid.yaml  faucet-close.yaml  h1_balance_hard copy.yaml  h1_balance_simple.yaml  h1_basketball.yaml  h1_crawl.yaml  h1_door.yaml  h1_highbar_simple.yaml  h1_hurdle.yaml  h1_kitchen.yaml  h1_maze.yaml  h1_pole.yaml  h1_push.yaml  h1_reach.yaml  h1_run.yaml  h1_sit_hard.yaml  h1_sit_simple.yaml  h1_slide.yaml  h1_stair.yaml  h1_stand.yaml  h1_truck.yaml  h1_walk.yaml  h1hand_balance_hard.yaml  h1hand_balance_simple.yaml  h1hand_basketball.yaml  h1hand_bookshelf_hard.yaml  h1hand_bookshelf_simple.yaml  h1hand_cabinet.yaml  h1hand_crawl.yaml  h1hand_cube.yaml  h1hand_door.yaml  h1hand_hurdle.yaml  h1hand_insert_normal.yaml  h1hand_insert_small.yaml  h1hand_kitchen.yaml  h1hand_maze.yaml  h1hand_package.yaml  (+25 more)
env/: __init__.py  customized_humanoid.py  customized_humanoid_bench.py  humanoid_textured.xml  metaworld_wrapper.py  r3m_state_wrapper.py  tasks.py
metrics/: __init__.py  reference_buffer_utils.py
reward_models/: __init__.py  per_step_fitting_base_model.py  per_step_ranking_base_model.py  per_step_ranking_base_model2.py  per_step_ranking_base_model2_jax.py
scripts/mvr/: run_mvr-metaworld.sh  (+1 more)
src/: __init__.py
vlms/: CLIP.py  CLIP_reward.py  S3DG.py  XCLIP.py  __init__.py  s3dg.py
(+20 files in other folders)
